--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,26 @@
   </div>
 
   <div class="content-section-a">
-    CODE YOUR FORM HERE!
+    <form method="POST" action="/get_results" style="text-align:center">
+        <label for="first_name">First Name:</label><br>
+        <input type="text" name="first_name" style="margin-bottom:10px"></input><br>
+        <label for="month">Select birthday month:</label><br>
+        <select name="month"><br>
+            <option value ="january">January</option>
+            <option value ="february">February</option>
+            <option value ="march">March</option>
+            <option value ="april">April</option>
+            <option value ="may">May</option>
+            <option value ="june">June</option>
+            <option value ="july">July</option>
+            <option value ="august">August</option>
+            <option value ="september">September</option>
+            <option value ="october">October</option>
+            <option value ="novmember">Novmember</option>
+            <option value ="december">December</option>
+        </select><br>
+        <input type='submit' style ="margin-top:10px">
+        </form>
   </div>
   <!-- /.content-section-a -->
 
