--- a/templates/results.html
+++ b/templates/results.html
@@ -14,7 +14,8 @@
 </head>
 
 <body>
-  CODE YOUR results PAGE HERE.
+  <h1 style="text-align:center">Your Results!</h1>
+  <p style="text-align:center">{{data["first_name"]}}, based on your birthday month of {{data["month"]}}, your gemstone is {{data["gemstone"]}}!</p>
 </body>
 
 </html>
